--- a/OurJourney.Application/OurJourney.Application.csproj
+++ b/OurJourney.Application/OurJourney.Application.csproj
@@ -15,4 +15,12 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Mappings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OurJourney.Domain\OurJourney.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
