--- a/OurJourney.Infrastructure/OurJourney.Infrastructure.csproj
+++ b/OurJourney.Infrastructure/OurJourney.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OurJourney.Application\OurJourney.Application.csproj" />
+  </ItemGroup>
+
 </Project>
