--- a/OurJourney.Persistence/OurJourney.Persistence.csproj
+++ b/OurJourney.Persistence/OurJourney.Persistence.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OurJourney.Application\OurJourney.Application.csproj" />
+    <ProjectReference Include="..\OurJourney.Domain\OurJourney.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
